--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "cSpell.words": []
+    "cSpell.words": [
+        "favicon"
+    ],
+    "cSpell.ignoreWords": [
+        "favicon"
+    ]
 }
